@@ -1,6 +1,7 @@
 /***************************************************************************************************
 *
-* Copyright (c) 2017 Open Universiteit - www.ou.nl
+* Copyright (c) 2017 - 2023 Universitat Politecnica de Valencia - www.upv.es
+* Copyright (c) 2018 - 2023 Open Universiteit - www.ou.nl
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
@@ -27,7 +28,6 @@
 * POSSIBILITY OF SUCH DAMAGE.
 *******************************************************************************************************/
 
-
 package org.testar.monkey.alayer.linux.SpyMode;
 
 import org.testar.monkey.Assert;
@@ -37,7 +37,6 @@ import org.testar.monkey.alayer.Pen;
 
 import javax.swing.*;
 import java.awt.*;
-
 
 public class JavaScreenCanvas implements Canvas {
 
@@ -155,7 +154,8 @@ public class JavaScreenCanvas implements Canvas {
 
         runningCheck();
         //System.out.println("Draw Line: (" + x1 + ", " + y1 + ").");
-        _paneReference.addDrawableContent(new DrawableLine(new Point(new Double(x1).intValue(), new Double(y1).intValue()), pen, _defaultPen, new Point(new Double(x2).intValue(), new Double(y2).intValue())));
+        _paneReference.addDrawableContent(new DrawableLine(new Point(Double.valueOf(x1).intValue(), Double.valueOf(y1).intValue()), pen, _defaultPen,
+                                                           new Point(Double.valueOf(x2).intValue(), Double.valueOf(y2).intValue())));
 
     }
 
@@ -165,7 +165,7 @@ public class JavaScreenCanvas implements Canvas {
 
         runningCheck();
         //System.out.println("Draw Text: (" + x + ", " + y + ").");
-        _paneReference.addDrawableContent(new DrawableText(new Point(new Double(x).intValue(), new Double(y).intValue()), pen, _defaultPen, text));
+        _paneReference.addDrawableContent(new DrawableText(new Point(Double.valueOf(x).intValue(), Double.valueOf(y).intValue()), pen, _defaultPen, text));
 
     }
 
@@ -175,8 +175,8 @@ public class JavaScreenCanvas implements Canvas {
 
         runningCheck();
         //System.out.println("Draw Ellipse: (" + x + ", " + y + ").");
-        _paneReference.addDrawableContent(new DrawableEllipse(new Point(new Double(x).intValue(), new Double(y).intValue()), pen, _defaultPen,
-                new Rectangle(new Double(x).intValue(), new Double(y).intValue(), new Double(width).intValue(), new Double(height).intValue())));
+        _paneReference.addDrawableContent(new DrawableEllipse(new Point(Double.valueOf(x).intValue(), Double.valueOf(y).intValue()), pen, _defaultPen,
+                new Rectangle(Double.valueOf(x).intValue(), Double.valueOf(y).intValue(), Double.valueOf(width).intValue(), Double.valueOf(height).intValue())));
 
     }
 
@@ -202,8 +202,8 @@ public class JavaScreenCanvas implements Canvas {
 
         runningCheck();
         //System.out.println("Draw Rect: (" + x + ", " + y + ").");
-        _paneReference.addDrawableContent(new DrawableRect(new Point(new Double(x).intValue(), new Double(y).intValue()), pen, _defaultPen,
-                new Rectangle(new Double(x).intValue(), new Double(y).intValue(), new Double(width).intValue(), new Double(height).intValue())));
+        _paneReference.addDrawableContent(new DrawableRect(new Point(Double.valueOf(x).intValue(), Double.valueOf(y).intValue()), pen, _defaultPen,
+                new Rectangle(Double.valueOf(x).intValue(), Double.valueOf(y).intValue(), Double.valueOf(width).intValue(), Double.valueOf(height).intValue())));
 
     }
 
